new primary color & new brand logo | experimental

--- a/src/index.html
+++ b/src/index.html
@@ -117,7 +117,7 @@
   <!-- CPython loading Screen -->
   <core-loading-screen id="loading-bg">
     <div class="loading-logo">
-      <img src="assets/images/logo/logo.png" alt="Logo" />
+      <img width="71" src="assets/images/logo/logo.png" alt="Logo" />
     </div>
     <div class="loading">
       <div class="effect-1 effects"></div>
