--- a/src/index.html
+++ b/src/index.html
@@ -160,4 +160,9 @@
         SVG: {linebreaks: {automatic: true}}
     });
 </script>
+
+<link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/gh/lipis/flag-icons@6.14.0/css/flag-icons.min.css"
+/>
 </html>
