--- a/src/index.html
+++ b/src/index.html
@@ -16,101 +16,68 @@
 
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
-<!--  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap" rel="stylesheet">-->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&display=swap" rel="stylesheet">
 
   <!-- CPython loading Screen CSS -->
   <style type="text/css">
-      #loading-bg {
-          width: 100%;
-          height: 100%;
-          background: #fff;
-          display: block;
-          position: absolute;
-          z-index: 99999;
-          pointer-events: none;
+    #loading-bg {
+      width: 100%;
+      height: 100%;
+      background: #fff;
+      display: block;
+      position: absolute;
+      z-index: 99999;
+      pointer-events: none;
+    }
+
+    .dark-layout #loading-bg {
+      background: #161d31;
+    }
+
+    .loading-logo {
+      position: absolute;
+      left: calc(50% - 45px);
+      top: 40%;
+    }
+
+    .loader {
+      width: 48px;
+      height: 48px;
+      border-radius: 50%;
+      display: inline-block;
+      border-top: 4px solid #FFF;
+      border-right: 4px solid transparent;
+      box-sizing: border-box;
+      animation: rotation 1s linear infinite;
+      position: absolute;
+      top: calc(50% - 24px);
+      left: calc(50% - 24px);
+    }
+    .loader::after {
+      content: '';
+      box-sizing: border-box;
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 48px;
+      height: 48px;
+      border-radius: 50%;
+      border-left: 4px solid var(--primary);
+      border-bottom: 4px solid transparent;
+      animation: rotation 0.5s linear infinite reverse;
+    }
+    @keyframes rotation {
+      0% {
+        transform: rotate(0deg);
       }
-
-      .loading-logo {
-          position: absolute;
-          left: calc(50% - 45px);
-          top: 40%;
+      100% {
+        transform: rotate(360deg);
       }
+    }
 
-      .loading {
-          position: absolute;
-          left: calc(50% - 35px);
-          top: 50%;
-          width: 55px;
-          height: 55px;
-          border-radius: 50%;
-          -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-          border: 3px solid transparent;
-      }
-
-      .loading .effect-1,
-      .loading .effect-2 {
-          position: absolute;
-          width: 100%;
-          height: 100%;
-          border-radius: 50%;
-          -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-      }
-
-      .loading .effect-1 {
-          animation: rotate s ease infinite;
-      }
-
-      .loading .effect-2 {
-          animation: rotateOpacity 1s ease infinite 0.1s;
-      }
-
-      .loading .effect-3 {
-          position: absolute;
-          width: 100%;
-          height: 100%;
-          border: 3px solid transparent;
-          border-left: 3px solid rgba(121, 97, 249, 1);
-          -webkit-animation: rotateOpacity 1s ease infinite 0.2s;
-          animation: rotateOpacity 1s ease infinite 0.2s;
-          border-radius: 50%;
-          -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-      }
-
-      .loading .effects {
-          transition: all 0.3s ease;
-      }
-
-      @keyframes rotate {
-          0% {
-              -webkit-transform: rotate(0deg);
-              transform: rotate(0deg);
-          }
-
-          100% {
-              -webkit-transform: rotate(1turn);
-              transform: rotate(1turn);
-          }
-      }
-
-      @keyframes rotateOpacity {
-          0% {
-              -webkit-transform: rotate(0deg);
-              transform: rotate(0deg);
-              opacity: 0.1;
-          }
-
-          100% {
-              -webkit-transform: rotate(1turn);
-              transform: rotate(1turn);
-              opacity: 1;
-          }
-      }
   </style>
   <!-- / CPython loading Screen CSS -->
 </head>
@@ -118,14 +85,7 @@
 <body>
 <!-- CPython loading Screen -->
 <core-loading-screen id="loading-bg">
-  <div class="loading-logo">
-    <img alt="Logo" src="assets/images/logo/logo.png" width="71"/>
-  </div>
-  <div class="loading">
-    <div class="effect-1 effects"></div>
-    <div class="effect-2 effects"></div>
-    <div class="effect-3 effects"></div>
-  </div>
+  <span class="loader"></span>
 </core-loading-screen>
 <!-- / CPython loading Screen -->
 
@@ -153,8 +113,8 @@
 </script>
 <script async id="MathJax-script" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"
         type="text/javascript">
-<script type="text/x-mathjax-config">
-    MathJax.Hub.Config({
+    <script type="text/x-mathjax-config">
+        MathJax.Hub.Config({
         CommonHTML: {linebreaks: {automatic: true}},
         "HTML-CSS": {linebreaks: {automatic: true}},
         SVG: {linebreaks: {automatic: true}}
@@ -162,7 +122,7 @@
 </script>
 
 <link
-  rel="stylesheet"
   href="https://cdn.jsdelivr.net/gh/lipis/flag-icons@6.14.0/css/flag-icons.min.css"
+  rel="stylesheet"
 />
 </html>
