[CHANGE] dark-color variables globally & some keenicon refactoring

--- a/src/index.html
+++ b/src/index.html
@@ -30,10 +30,11 @@
       position: absolute;
       z-index: 99999;
       pointer-events: none;
+      overflow: hidden !important;
     }
 
     .dark-layout #loading-bg {
-      background: #161d31;
+      background: #0f1014;
     }
 
     .loading-logo {
