--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <meta content="width=device-width, initial-scale=1" name="viewport"/>
   <meta content="KEP" name="description"/>
   <meta content="python, c++, cpp, cp, learn" name="keywords"/>
-  <meta content="PIXINVENT" name="author"/>
+  <meta content="Nazarbek Baltabaev" name="author"/>
   <meta content="width=device-width, initial-scale=1.0, maximum-scale=5.0" name="viewport"/>
 
   <link href="favicon.ico" rel="icon" type="image/x-icon"/>
@@ -82,36 +82,17 @@
 </head>
 
 <body>
-<core-loading-screen id="loading-bg">
-  <span class="loader"></span>
-</core-loading-screen>
+  <core-loading-screen id="loading-bg">
+    <span class="loader"></span>
+  </core-loading-screen>
 
-<app-root></app-root>
+  <app-root></app-root>
 </body>
 
 <script src="//cdn.jsdelivr.net/gh/highlightjs/cdn-release/build/highlight.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/highlightjs-line-numbers.js/dist/highlightjs-line-numbers.min.js"></script>
 
 <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-<script>
-    MathJax = {
-        tex: {
-            inlineMath: [
-                ['$', '$'],
-                ['\\(', '\\)']
-            ]
-        }
-    };
-</script>
-<script async id="MathJax-script" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"
-        type="text/javascript">
-    <script type="text/x-mathjax-config">
-        MathJax.Hub.Config({
-        CommonHTML: {linebreaks: {automatic: true}},
-        "HTML-CSS": {linebreaks: {automatic: true}},
-        SVG: {linebreaks: {automatic: true}}
-    });
-</script>
 
 <link
   href="https://cdn.jsdelivr.net/gh/lipis/flag-icons@6.14.0/css/flag-icons.min.css"
