--- a/src/index.html
+++ b/src/index.html
@@ -88,8 +88,15 @@
 
   <app-root></app-root>
 </body>
+  <script src="assets/plugins/snowf/snowf.min.js"></script>
   <link
     href="https://cdn.jsdelivr.net/gh/lipis/flag-icons@6.14.0/css/flag-icons.min.css"
     rel="stylesheet"
   />
+  <script>
+      snowf.init({
+          size: 5,
+          amount: 50
+      });
+  </script>
 </html>
