--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="utf-8"/>
-  <title>CPython.uz</title>
+  <title>KEP.uz</title>
   <base href="/"/>
   <meta charset="utf-8"/>
   <meta content="width=device-width, initial-scale=1" name="viewport"/>
-  <meta content="CPython" name="description"/>
+  <meta content="KEP" name="description"/>
   <meta content="python, c++, cpp, cp, learn" name="keywords"/>
   <meta content="Nazarbek Baltabaev" name="author"/>
   <meta content="width=device-width, initial-scale=1.0, maximum-scale=5.0" name="viewport"/>
