--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,23 @@
 <html lang="en">
 
 <head>
+  {% if problem and problem.og_image %}
+  <meta name="description" content="{{ problem.title_uz }}">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:image" content="{{ problem.og_image.url }}">
+  <meta property="og:image" content="{{ problem.og_image.url }}">
+  {% endif %}
+
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-MBQPKFTEWV"></script>
+  <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-MBQPKFTEWV');
+  </script>
+  <script async src="https://www.googleoptimize.com/optimize.js?id=OPT-N4B4259"></script>
+
   <meta charset="utf-8"/>
   <title>KEP.uz</title>
   <base href="/"/>
