--- a/src/index.html
+++ b/src/index.html
@@ -33,31 +33,12 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&family=Gilroy:wght@300;400;600;700&family=Quicksand:wght@500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&family=Comfortaa:wght@300;400;600;700&family=Quicksand:wght@500&display=swap" rel="stylesheet">
 
   <style>
     @font-face {
-      font-family: 'Gilroy';
-      src: url('assets/fonts/gilroy/Gilroy-Light.ttf') format('opentype');
-      font-weight: 300;
-    }
-
-    @font-face {
-      font-family: 'Gilroy';
-      src: url('assets/fonts/gilroy/Gilroy-Regular.ttf') format('opentype');
-      font-weight: 400;
-    }
-
-    /*@font-face {*/
-    /*  font-family: 'Gilroy';*/
-    /*  src: url('assets/fonts/gilroy/Gilroy-Medium.ttf') format('opentype');*/
-    /*  font-weight: 500;*/
-    /*}*/
-
-    @font-face {
-      font-family: 'Gilroy';
-      src: url('assets/fonts/gilroy/Gilroy-Bold.ttf') format('opentype');
-      font-weight: 600;
+      font-family: 'Comfortaa';
+      src: url('assets/fonts/Comfortaa/Comfortaa.ttf') format('opentype');
     }
 
     #loading-bg {
