--- a/src/index.html
+++ b/src/index.html
@@ -33,14 +33,9 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&family=Comfortaa:wght@300;400;600;700&family=Quicksand:wght@500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@500" rel="stylesheet">
 
   <style>
-    @font-face {
-      font-family: 'Comfortaa';
-      src: url('assets/fonts/Comfortaa/Comfortaa.ttf') format('opentype');
-    }
-
     #loading-bg {
       width: 100%;
       height: 100%;
