--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@500" rel="stylesheet">
 
   <style>
+    @font-face {
+      font-family: 'Comfortaa';
+      src: url('assets/fonts/Comfortaa/Comfortaa.ttf') format('opentype');
+    }
+
     #loading-bg {
       width: 100%;
       height: 100%;
