road to 90 | google page speed

--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,7 @@
     @font-face {
       font-family: 'Comfortaa';
       src: url('assets/fonts/Comfortaa/Comfortaa.ttf') format('opentype');
+      font-display: swap;
     }
 
     #loading-bg {
