--- a/src/index.html
+++ b/src/index.html
@@ -265,7 +265,7 @@
   <app-root></app-root>
 </body>
   <link
-    href="https://cdn.jsdelivr.net/gh/lipis/flag-icons@6.14.0/css/flag-icons.min.css"
+    href="assets/fonts/flag-icons/flag-icons.min.css"
     rel="stylesheet"
   />
 
