--- a/src/index.html
+++ b/src/index.html
@@ -2,17 +2,21 @@
 <html lang="en">
 
 <head>
-<!--  {% if problem and problem.og_image %}-->
-<!--  <meta name="description" content="{{ problem.title_uz }}">-->
-<!--  <meta name="twitter:card" content="summary_large_image">-->
-<!--  <meta name="twitter:image" content="{{ problem.og_image.url }}">-->
-<!--  <meta property="og:image" content="{{ problem.og_image.url }}">-->
-<!--  {% endif %}-->
+  <!--  {% if problem and problem.og_image %}-->
+  <!--  <meta name="description" content="{{ problem.title_uz }}">-->
+  <!--  <meta name="twitter:card" content="summary_large_image">-->
+  <!--  <meta name="twitter:image" content="{{ problem.og_image.url }}">-->
+  <!--  <meta property="og:image" content="{{ problem.og_image.url }}">-->
+  <!--  {% endif %}-->
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-MBQPKFTEWV"></script>
   <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
+
+      function gtag() {
+          dataLayer.push(arguments);
+      }
+
       gtag('js', new Date());
 
       gtag('config', 'G-MBQPKFTEWV');
@@ -30,248 +34,262 @@
 
   <link href="favicon.ico" rel="icon" type="image/x-icon"/>
 
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com" rel="preconnect">
+  <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
   <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@500" rel="stylesheet">
 
   <style>
-    @font-face {
-      font-family: 'Comfortaa';
-      src: url('assets/fonts/Comfortaa/Comfortaa.ttf') format('opentype');
-      font-display: swap;
-    }
-
-    #loading-bg {
-      width: 100%;
-      height: 100%;
-      background: #fff;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      position: absolute;
-      z-index: 99999;
-      pointer-events: none;
-      overflow: hidden !important;
-    }
-
-    .dark-layout #loading-bg {
-      background: #0f1014;
-    }
-
-    @-webkit-keyframes animate-svg-fill-1 {
-      0% {
-        fill: transparent;
+      @font-face {
+          font-family: 'Comfortaa';
+          src: url('assets/fonts/Comfortaa/Comfortaa.ttf') format('opentype');
+          font-display: swap;
       }
 
-      100% {
-        fill: rgb(73, 73, 222);
-      }
-    }
-
-    @keyframes animate-svg-fill-1 {
-      0% {
-        fill: transparent;
-      }
-
-      100% {
-        fill: rgb(73, 73, 222);
-      }
-    }
-
-    .svg-elem-1 {
-      -webkit-animation: animate-svg-fill-1 0.7s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0.2s both;
-      animation: animate-svg-fill-1 0.7s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0.2s both;
-    }
-
-    @-webkit-keyframes animate-svg-fill-2 {
-      0% {
-        fill: transparent;
+      #loading-bg {
+          width: 100%;
+          height: 100%;
+          background: #fff;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          position: absolute;
+          z-index: 99999;
+          pointer-events: none;
+          overflow: hidden !important;
       }
 
-      100% {
-        fill: rgb(73, 73, 222);
-      }
-    }
-
-    @keyframes animate-svg-fill-2 {
-      0% {
-        fill: transparent;
+      .dark-layout #loading-bg {
+          background: #0f1014;
       }
 
-      100% {
-        fill: rgb(73, 73, 222);
-      }
-    }
+      @-webkit-keyframes animate-svg-fill-1 {
+          0% {
+              fill: transparent;
+          }
 
-    .svg-elem-2 {
-      -webkit-animation: animate-svg-fill-2 0.7s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0.4s both;
-      animation: animate-svg-fill-2 0.7s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0.4s both;
-    }
-
-    @-webkit-keyframes animate-svg-fill-3 {
-      0% {
-        fill: transparent;
+          100% {
+              fill: rgb(73, 73, 222);
+          }
       }
 
-      100% {
-        fill: rgb(73, 73, 222);
-      }
-    }
+      @keyframes animate-svg-fill-1 {
+          0% {
+              fill: transparent;
+          }
 
-    @keyframes animate-svg-fill-3 {
-      0% {
-        fill: transparent;
-      }
-
-      100% {
-        fill: rgb(73, 73, 222);
-      }
-    }
-
-    .svg-elem-3 {
-      -webkit-animation: animate-svg-fill-3 0.7s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0.6s both;
-      animation: animate-svg-fill-3 0.7s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0.6s both;
-    }
-
-    @-webkit-keyframes animate-svg-fill-4 {
-      0% {
-        fill: transparent;
+          100% {
+              fill: rgb(73, 73, 222);
+          }
       }
 
-      100% {
-        fill: rgb(73, 73, 222);
-      }
-    }
-
-    @keyframes animate-svg-fill-4 {
-      0% {
-        fill: transparent;
+      .svg-elem-1 {
+          -webkit-animation: animate-svg-fill-1 0.7s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0.2s both;
+          animation: animate-svg-fill-1 0.7s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0.2s both;
       }
 
-      100% {
-        fill: rgb(73, 73, 222);
-      }
-    }
+      @-webkit-keyframes animate-svg-fill-2 {
+          0% {
+              fill: transparent;
+          }
 
-    .svg-elem-4 {
-      -webkit-animation: animate-svg-fill-4 0.7s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0.8s both;
-      animation: animate-svg-fill-4 0.7s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0.8s both;
-    }
-
-    @-webkit-keyframes animate-svg-fill-5 {
-      0% {
-        fill: transparent;
+          100% {
+              fill: rgb(73, 73, 222);
+          }
       }
 
-      100% {
-        fill: rgb(73, 73, 222);
-      }
-    }
+      @keyframes animate-svg-fill-2 {
+          0% {
+              fill: transparent;
+          }
 
-    @keyframes animate-svg-fill-5 {
-      0% {
-        fill: transparent;
-      }
-
-      100% {
-        fill: rgb(73, 73, 222);
-      }
-    }
-
-    .svg-elem-5 {
-      -webkit-animation: animate-svg-fill-5 0.7s cubic-bezier(0.785, 0.135, 0.15, 0.86) 1s both;
-      animation: animate-svg-fill-5 0.7s cubic-bezier(0.785, 0.135, 0.15, 0.86) 1s both;
-    }
-
-    @-webkit-keyframes animate-svg-fill-6 {
-      0% {
-        fill: transparent;
+          100% {
+              fill: rgb(73, 73, 222);
+          }
       }
 
-      100% {
-        fill: rgb(73, 73, 222);
-      }
-    }
-
-    @keyframes animate-svg-fill-6 {
-      0% {
-        fill: transparent;
+      .svg-elem-2 {
+          -webkit-animation: animate-svg-fill-2 0.7s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0.4s both;
+          animation: animate-svg-fill-2 0.7s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0.4s both;
       }
 
-      100% {
-        fill: rgb(73, 73, 222);
-      }
-    }
+      @-webkit-keyframes animate-svg-fill-3 {
+          0% {
+              fill: transparent;
+          }
 
-    .svg-elem-6 {
-      -webkit-animation: animate-svg-fill-6 0.7s cubic-bezier(0.785, 0.135, 0.15, 0.86) 1.2s both;
-      animation: animate-svg-fill-6 0.7s cubic-bezier(0.785, 0.135, 0.15, 0.86) 1.2s both;
-    }
-
-    @-webkit-keyframes animate-svg-fill-7 {
-      0% {
-        fill: transparent;
+          100% {
+              fill: rgb(73, 73, 222);
+          }
       }
 
-      100% {
-        fill: rgb(77, 21, 21);
-      }
-    }
+      @keyframes animate-svg-fill-3 {
+          0% {
+              fill: transparent;
+          }
 
-    @keyframes animate-svg-fill-7 {
-      0% {
-        fill: transparent;
+          100% {
+              fill: rgb(73, 73, 222);
+          }
       }
 
-      100% {
-        fill: rgb(171, 42, 42);
+      .svg-elem-3 {
+          -webkit-animation: animate-svg-fill-3 0.7s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0.6s both;
+          animation: animate-svg-fill-3 0.7s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0.6s both;
       }
-    }
 
-    .svg-elem-7 {
-      -webkit-animation: animate-svg-fill-7 0.7s cubic-bezier(0.785, 0.135, 0.15, 0.86) 1.4s both;
-      animation: animate-svg-fill-7 0.7s cubic-bezier(0.785, 0.135, 0.15, 0.86) 1.4s both;
-    }
+      @-webkit-keyframes animate-svg-fill-4 {
+          0% {
+              fill: transparent;
+          }
+
+          100% {
+              fill: rgb(73, 73, 222);
+          }
+      }
+
+      @keyframes animate-svg-fill-4 {
+          0% {
+              fill: transparent;
+          }
+
+          100% {
+              fill: rgb(73, 73, 222);
+          }
+      }
+
+      .svg-elem-4 {
+          -webkit-animation: animate-svg-fill-4 0.7s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0.8s both;
+          animation: animate-svg-fill-4 0.7s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0.8s both;
+      }
+
+      @-webkit-keyframes animate-svg-fill-5 {
+          0% {
+              fill: transparent;
+          }
+
+          100% {
+              fill: rgb(73, 73, 222);
+          }
+      }
+
+      @keyframes animate-svg-fill-5 {
+          0% {
+              fill: transparent;
+          }
+
+          100% {
+              fill: rgb(73, 73, 222);
+          }
+      }
+
+      .svg-elem-5 {
+          -webkit-animation: animate-svg-fill-5 0.7s cubic-bezier(0.785, 0.135, 0.15, 0.86) 1s both;
+          animation: animate-svg-fill-5 0.7s cubic-bezier(0.785, 0.135, 0.15, 0.86) 1s both;
+      }
+
+      @-webkit-keyframes animate-svg-fill-6 {
+          0% {
+              fill: transparent;
+          }
+
+          100% {
+              fill: rgb(73, 73, 222);
+          }
+      }
+
+      @keyframes animate-svg-fill-6 {
+          0% {
+              fill: transparent;
+          }
+
+          100% {
+              fill: rgb(73, 73, 222);
+          }
+      }
+
+      .svg-elem-6 {
+          -webkit-animation: animate-svg-fill-6 0.7s cubic-bezier(0.785, 0.135, 0.15, 0.86) 1.2s both;
+          animation: animate-svg-fill-6 0.7s cubic-bezier(0.785, 0.135, 0.15, 0.86) 1.2s both;
+      }
+
+      @-webkit-keyframes animate-svg-fill-7 {
+          0% {
+              fill: transparent;
+          }
+
+          100% {
+              fill: rgb(77, 21, 21);
+          }
+      }
+
+      @keyframes animate-svg-fill-7 {
+          0% {
+              fill: transparent;
+          }
+
+          100% {
+              fill: rgb(171, 42, 42);
+          }
+      }
+
+      .svg-elem-7 {
+          -webkit-animation: animate-svg-fill-7 0.7s cubic-bezier(0.785, 0.135, 0.15, 0.86) 1.4s both;
+          animation: animate-svg-fill-7 0.7s cubic-bezier(0.785, 0.135, 0.15, 0.86) 1.4s both;
+      }
   </style>
 </head>
 
 <body>
-  <core-loading-screen id="loading-bg">
-    <svg width="128" height="128" viewBox="0 0 356 356" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <g filter="url(#filter0_b_718_8504)">
-        <g clip-path="url(#clip0_718_8504)">
-          <path d="M240.67 98.1566L143.085 195.741L107.6 195.741L107.6 160.256L205.184 62.6715L240.67 62.6715L240.67 98.1566Z" fill="#4949DE" class="svg-elem-1"></path>
-          <path d="M196.242 53.8725L36.5584 213.556L18.8159 195.813L18.8159 160.328L160.757 18.3873L196.242 18.3873L196.242 36.1299L196.242 53.8725Z" fill="#4949DE" class="svg-elem-2"></path>
-          <path d="M240.672 62.6713L338.028 160.381L338.028 195.512L302.543 195.512L205.187 99.6505L205.187 62.6713L240.672 62.6713Z" fill="#4949DE" class="svg-elem-3"></path>
-          <path d="M338.257 195.743L276.158 257.842L240.673 257.842L240.673 222.356L302.772 160.257L338.257 160.257L338.257 195.743Z" fill="#4949DE" class="svg-elem-4"></path>
-          <path d="M196.314 142.513L276.156 222.355L276.156 257.84L239.923 257.84L160.829 177.998L196.314 142.513Z" fill="#4949DE" class="svg-elem-5"></path>
-          <path d="M160.828 337.675L18.887 195.735L18.8871 160.25L54.3722 160.25L196.313 302.19L196.313 337.675L160.828 337.675Z" fill="#4949DE" class="svg-elem-6"></path>
-        </g>
+<core-loading-screen id="loading-bg">
+  <svg fill="none" height="128" viewBox="0 0 356 356" width="128" xmlns="http://www.w3.org/2000/svg">
+    <g filter="url(#filter0_b_718_8504)">
+      <g clip-path="url(#clip0_718_8504)">
+        <path
+          class="svg-elem-1"
+          d="M240.67 98.1566L143.085 195.741L107.6 195.741L107.6 160.256L205.184 62.6715L240.67 62.6715L240.67 98.1566Z" fill="#4949DE"></path>
+        <path
+          class="svg-elem-2"
+          d="M196.242 53.8725L36.5584 213.556L18.8159 195.813L18.8159 160.328L160.757 18.3873L196.242 18.3873L196.242 36.1299L196.242 53.8725Z" fill="#4949DE"></path>
+        <path
+          class="svg-elem-3"
+          d="M240.672 62.6713L338.028 160.381L338.028 195.512L302.543 195.512L205.187 99.6505L205.187 62.6713L240.672 62.6713Z" fill="#4949DE"></path>
+        <path
+          class="svg-elem-4"
+          d="M338.257 195.743L276.158 257.842L240.673 257.842L240.673 222.356L302.772 160.257L338.257 160.257L338.257 195.743Z" fill="#4949DE"></path>
+        <path class="svg-elem-5"
+              d="M196.314 142.513L276.156 222.355L276.156 257.84L239.923 257.84L160.829 177.998L196.314 142.513Z" fill="#4949DE"></path>
+        <path
+          class="svg-elem-6"
+          d="M160.828 337.675L18.887 195.735L18.8871 160.25L54.3722 160.25L196.313 302.19L196.313 337.675L160.828 337.675Z" fill="#4949DE"></path>
       </g>
-      <defs>
-        <filter id="filter0_b_718_8504" x="-120.5" y="-120.5" width="597" height="597" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
-          <feFlood flood-opacity="0" result="BackgroundImageFix"></feFlood>
-          <feGaussianBlur in="BackgroundImageFix" stdDeviation="60.25"></feGaussianBlur>
-          <feComposite in2="SourceAlpha" operator="in" result="effect1_backgroundBlur_718_8504"></feComposite>
-          <feBlend mode="normal" in="SourceGraphic" in2="effect1_backgroundBlur_718_8504" result="shape"></feBlend>
-        </filter>
-        <clipPath id="clip0_718_8504">
-          <rect x="356" width="356" height="356" rx="160" transform="rotate(90 356 0)" class="svg-elem-7"></rect>
-        </clipPath>
-      </defs>
-    </svg>
-  </core-loading-screen>
+    </g>
+    <defs>
+      <filter color-interpolation-filters="sRGB" filterUnits="userSpaceOnUse" height="597" id="filter0_b_718_8504" width="597" x="-120.5"
+              y="-120.5">
+        <feFlood flood-opacity="0" result="BackgroundImageFix"></feFlood>
+        <feGaussianBlur in="BackgroundImageFix" stdDeviation="60.25"></feGaussianBlur>
+        <feComposite in2="SourceAlpha" operator="in" result="effect1_backgroundBlur_718_8504"></feComposite>
+        <feBlend in="SourceGraphic" in2="effect1_backgroundBlur_718_8504" mode="normal" result="shape"></feBlend>
+      </filter>
+      <clipPath id="clip0_718_8504">
+        <rect class="svg-elem-7" height="356" rx="160" transform="rotate(90 356 0)" width="356" x="356"></rect>
+      </clipPath>
+    </defs>
+  </svg>
+</core-loading-screen>
 
-  <app-root></app-root>
+<app-root></app-root>
 </body>
-  <link
-    href="assets/fonts/flag-icons/flag-icons.min.css"
-    rel="stylesheet"
-  />
+<link
+  href="assets/fonts/flag-icons/flag-icons.min.css"
+  rel="stylesheet"
+/>
 
-  <script>
-    if (JSON.parse(localStorage.getItem('config') || {})?.layout?.skin === 'dark') {
-        document.body.classList.add('dark-layout');
-    }
-  </script>
+<script>
+    try {
+        if (JSON.parse(localStorage.getItem('config') || {})?.layout?.skin === 'dark') {
+            document.body.classList.add('dark-layout');
+        }
+    } catch (e) {}
+</script>
 </html>
