--- a/src/index.html
+++ b/src/index.html
@@ -231,48 +231,48 @@
 
 <body>
 <core-loading-screen id="loading-bg">
-<!--  <svg fill="none" height="128" viewBox="0 0 356 356" width="128" xmlns="http://www.w3.org/2000/svg">-->
-<!--    <g filter="url(#filter0_b_718_8504)">-->
-<!--      <g clip-path="url(#clip0_718_8504)">-->
-<!--        <path-->
-<!--          class="svg-elem-1"-->
-<!--          d="M240.67 98.1566L143.085 195.741L107.6 195.741L107.6 160.256L205.184 62.6715L240.67 62.6715L240.67 98.1566Z"-->
-<!--          fill="#4949DE"></path>-->
-<!--        <path-->
-<!--          class="svg-elem-2"-->
-<!--          d="M196.242 53.8725L36.5584 213.556L18.8159 195.813L18.8159 160.328L160.757 18.3873L196.242 18.3873L196.242 36.1299L196.242 53.8725Z"-->
-<!--          fill="#4949DE"></path>-->
-<!--        <path-->
-<!--          class="svg-elem-3"-->
-<!--          d="M240.672 62.6713L338.028 160.381L338.028 195.512L302.543 195.512L205.187 99.6505L205.187 62.6713L240.672 62.6713Z"-->
-<!--          fill="#4949DE"></path>-->
-<!--        <path-->
-<!--          class="svg-elem-4"-->
-<!--          d="M338.257 195.743L276.158 257.842L240.673 257.842L240.673 222.356L302.772 160.257L338.257 160.257L338.257 195.743Z"-->
-<!--          fill="#4949DE"></path>-->
-<!--        <path class="svg-elem-5"-->
-<!--              d="M196.314 142.513L276.156 222.355L276.156 257.84L239.923 257.84L160.829 177.998L196.314 142.513Z"-->
-<!--              fill="#4949DE"></path>-->
-<!--        <path-->
-<!--          class="svg-elem-6"-->
-<!--          d="M160.828 337.675L18.887 195.735L18.8871 160.25L54.3722 160.25L196.313 302.19L196.313 337.675L160.828 337.675Z"-->
-<!--          fill="#4949DE"></path>-->
-<!--      </g>-->
-<!--    </g>-->
-<!--    <defs>-->
-<!--      <filter color-interpolation-filters="sRGB" filterUnits="userSpaceOnUse" height="597" id="filter0_b_718_8504"-->
-<!--              width="597" x="-120.5"-->
-<!--              y="-120.5">-->
-<!--        <feFlood flood-opacity="0" result="BackgroundImageFix"></feFlood>-->
-<!--        <feGaussianBlur in="BackgroundImageFix" stdDeviation="60.25"></feGaussianBlur>-->
-<!--        <feComposite in2="SourceAlpha" operator="in" result="effect1_backgroundBlur_718_8504"></feComposite>-->
-<!--        <feBlend in="SourceGraphic" in2="effect1_backgroundBlur_718_8504" mode="normal" result="shape"></feBlend>-->
-<!--      </filter>-->
-<!--      <clipPath id="clip0_718_8504">-->
-<!--        <rect class="svg-elem-7" height="356" rx="160" transform="rotate(90 356 0)" width="356" x="356"></rect>-->
-<!--      </clipPath>-->
-<!--    </defs>-->
-<!--  </svg>-->
+  <svg fill="none" height="128" viewBox="0 0 356 356" width="128" xmlns="http://www.w3.org/2000/svg">
+    <g filter="url(#filter0_b_718_8504)">
+      <g clip-path="url(#clip0_718_8504)">
+        <path
+          class="svg-elem-1"
+          d="M240.67 98.1566L143.085 195.741L107.6 195.741L107.6 160.256L205.184 62.6715L240.67 62.6715L240.67 98.1566Z"
+          fill="#4949DE"></path>
+        <path
+          class="svg-elem-2"
+          d="M196.242 53.8725L36.5584 213.556L18.8159 195.813L18.8159 160.328L160.757 18.3873L196.242 18.3873L196.242 36.1299L196.242 53.8725Z"
+          fill="#4949DE"></path>
+        <path
+          class="svg-elem-3"
+          d="M240.672 62.6713L338.028 160.381L338.028 195.512L302.543 195.512L205.187 99.6505L205.187 62.6713L240.672 62.6713Z"
+          fill="#4949DE"></path>
+        <path
+          class="svg-elem-4"
+          d="M338.257 195.743L276.158 257.842L240.673 257.842L240.673 222.356L302.772 160.257L338.257 160.257L338.257 195.743Z"
+          fill="#4949DE"></path>
+        <path class="svg-elem-5"
+              d="M196.314 142.513L276.156 222.355L276.156 257.84L239.923 257.84L160.829 177.998L196.314 142.513Z"
+              fill="#4949DE"></path>
+        <path
+          class="svg-elem-6"
+          d="M160.828 337.675L18.887 195.735L18.8871 160.25L54.3722 160.25L196.313 302.19L196.313 337.675L160.828 337.675Z"
+          fill="#4949DE"></path>
+      </g>
+    </g>
+    <defs>
+      <filter color-interpolation-filters="sRGB" filterUnits="userSpaceOnUse" height="597" id="filter0_b_718_8504"
+              width="597" x="-120.5"
+              y="-120.5">
+        <feFlood flood-opacity="0" result="BackgroundImageFix"></feFlood>
+        <feGaussianBlur in="BackgroundImageFix" stdDeviation="60.25"></feGaussianBlur>
+        <feComposite in2="SourceAlpha" operator="in" result="effect1_backgroundBlur_718_8504"></feComposite>
+        <feBlend in="SourceGraphic" in2="effect1_backgroundBlur_718_8504" mode="normal" result="shape"></feBlend>
+      </filter>
+      <clipPath id="clip0_718_8504">
+        <rect class="svg-elem-7" height="356" rx="160" transform="rotate(90 356 0)" width="356" x="356"></rect>
+      </clipPath>
+    </defs>
+  </svg>
 </core-loading-screen>
 
 <app-root></app-root>
