add toggle theme effects to system settings

--- a/src/index.html
+++ b/src/index.html
@@ -31,43 +31,9 @@
     <link href="styles.css" rel="stylesheet">
   </noscript>
 
+  <style id="toggle-effect-style"></style>
+
   <style>
-    ::view-transition-group(root) {
-      animation-duration: 0.7s;
-      animation-timing-function: var(--expo-out);
-    }
-
-    ::view-transition-new(root) {
-      animation-name: reveal-light;
-    }
-
-    ::view-transition-old(root),
-    .dark-layout::view-transition-old(root) {
-      animation: none;
-      z-index: -1;
-    }
-    .dark-layout::view-transition-new(root) {
-      animation-name: reveal-dark;
-    }
-
-    @keyframes reveal-dark {
-      from {
-        clip-path: polygon(50% -71%, -50% 71%, -50% 71%, 50% -71%);
-      }
-      to {
-        clip-path: polygon(50% -71%, -50% 71%, 50% 171%, 171% 50%);
-      }
-    }
-
-    @keyframes reveal-light {
-      from {
-        clip-path: polygon(171% 50%, 50% 171%, 50% 171%, 171% 50%);
-      }
-      to {
-        clip-path: polygon(171% 50%, 50% 171%, -50% 71%, 50% -71%);
-      }
-    }
-
     @font-face {
       font-family: 'Comfortaa';
       src: url('assets/fonts/Comfortaa/Comfortaa.ttf') format('opentype');
@@ -316,8 +282,6 @@
 
 <app-root></app-root>
 </body>
-
-<script src="https://raw.githubusercontent.com/rudrodip/theme-toggle-effect/refs/heads/main/script.js"></script>
 
 <script>
   try {
