add google tag manager

--- a/src/index.html
+++ b/src/index.html
@@ -255,6 +255,7 @@
   <app-root></app-root>
 </body>
 
+<script src="https://www.googletagmanager.com/gtag/js?id=G-MBQPKFTEWV"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
 
