--- a/src/index.html
+++ b/src/index.html
@@ -26,12 +26,22 @@
   <link
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     rel="stylesheet">
-  <link as="style" href="https://cdn.jsdelivr.net/gh/lipis/flag-icons@6.14.0/css/flag-icons.min.css"
-        onload="this.onload=null;this.rel='stylesheet'"
-        rel="preload">
+<!--  <link as="style" href="https://cdn.jsdelivr.net/gh/lipis/flag-icons@6.14.0/css/flag-icons.min.css"-->
+<!--        onload="this.onload=null;this.rel='stylesheet'"-->
+<!--        rel="preload">-->
+    <link as="style" href="assets/fonts/flag-icon.css"
+          onload="this.onload=null;this.rel='stylesheet'"
+          rel="preload">
+
 </head>
 
 <style>
+  @font-face {
+    font-family: 'Rajdhani';
+    src: url('assets/fonts/Rajdhani-Regular.ttf') format('opentype');
+    font-display: swap;
+  }
+
   #loading-bg {
     width: 100%;
     height: 100%;
