--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,13 @@
 
   <link href="assets/images/logo/favicon.ico" rel="icon" type="image/x-icon">
   <link href="https://fonts.gstatic.com" rel="preconnect">
-  <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,300;1,300&display=swap" rel="stylesheet">
+  <style>
+    @font-face {
+      font-family: 'Comfortaa';
+      src: url('assets/fonts/Comfortaa/Comfortaa.ttf') format('opentype');
+      font-display: swap;
+    }
+  </style>
   <link
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     rel="stylesheet">
