--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,8 @@
 
   <link href="assets/images/logo/favicon.ico" rel="icon" type="image/x-icon">
   <link href="https://fonts.gstatic.com" rel="preconnect">
+  <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap" rel="stylesheet">
+
   <style>
     @font-face {
       font-family: 'Comfortaa';
